openmolar (0.5.0-alpha7-0~__DIST__0) __DIST__; urgency=low

  * New Upstream Release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 25 Nov 2013 23:48:19 +0000


openmolar (0.5.0-alpha5-0~__DIST__0) __DIST__; urgency=low

  * New upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 25 Nov 2013 16:07:26 +0000


openmolar (0.5.0-alpha4-0~__DIST__0) __DIST__; urgency=low

  * New upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 25 Nov 2013 12:30:00 +0000


openmolar (0.5.0-alpha3-0~__DIST__0) __DIST__; urgency=low

  * Upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 25 Nov 2013 11:07:08 +0000


openmolar (0.5.0-alpha2-0~__DIST__0) __DIST__; urgency=low

  * New upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 24 Nov 2013 19:50:46 +0000


openmolar (0.5.0-alpha1-1~__DIST__0) __DIST__; urgency=low

  * modded control to include new dependency on python-qscintilla2

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 24 Nov 2013 18:51:46 +0000


openmolar (0.5.0-alpha1-0~__DIST__0) __DIST__; urgency=low

  * New upstream release

 -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 24 Nov 2013 14:20:23 +0000

openmolar (0.4.09+bzr0843-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 28 Jun 2013 12:50:23 +0100


openmolar (0.4.09+bzr0842-0~__DIST__0) __DIST__; urgency=low

  * upstream bugfix

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 28 Jun 2013 10:30:30 +0100


openmolar (0.4.09+bzr0840-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 27 Jun 2013 00:03:09 +0100


openmolar (0.4.07+bzr0839-0~__DIST__0) __DIST__; urgency=low

  * upstream changes

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 26 Jun 2013 10:55:33 +0100


openmolar (0.4.07+bzr0837-0~__DIST__0) __DIST__; urgency=low

  * upstream changes
