@@ -1,3 +1,10 @@
+openmolar (0.5.0-alpha8-0~__DIST__0) __DIST__; urgency=low
+
+  * New Upstream Release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 26 Nov 2013 09:28:00 +0000
+
+
 openmolar (0.5.0-alpha7-0~__DIST__0) __DIST__; urgency=low
 
   * New Upstream Release
